fix(media settings): fix dropdown visibility

--- a/components/tailored/settings/pages/profile/Profile.less
+++ b/components/tailored/settings/pages/profile/Profile.less
@@ -109,7 +109,7 @@
   }
 }
 
-@media only screen and (max-width: @mobile-breakpoint) {
+@media only screen and (max-width: 1300px) {
   .profile-photo-column {
     max-width: 75px;
     .profile-photo {
